--- a/settings/project.json
+++ b/settings/project.json
@@ -1,7 +1,3 @@
 {
-  "last-module-event-record-time": 1718377004406,
-  "start-scene": "f0355029-006f-4dcd-84a9-df29ab6006d0",
-  "group-list": [
-    "default"
-  ]
+  "last-module-event-record-time": 1719407026698
 }
