UPDATE: card score updated

--- a/settings/project.json
+++ b/settings/project.json
@@ -1,3 +1,4 @@
 {
-  "last-module-event-record-time": 1719409010087
+  "last-module-event-record-time": 1719409010087,
+  "start-scene": "f0355029-006f-4dcd-84a9-df29ab6006d0"
 }
